# Financial-cashflow-agent

./: .env.example  .flake8  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
agent/: __init__.py
config/: __init__.py  logging_config.py  settings.py
data/vector_store/: meta.json
database/: __init__.py  db.py  schema.sql  seed_db.py
eval/: __init__.py
ingest/: __init__.py  chunker.py  create_docs.py  embedder.py  ingest_docs.py  vector_store.py
reports/: __init__.py
tests/: __init__.py
tools/: __init__.py  forecast_tool.py  rag_tool.py  sql_tool.py
